# Project64-EM

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Plugin/x86/GFX/GlideN64/: GLideN64.custom.ini
Scripts/: adapter.lua
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt
Source/Project64/: CMakeLists.txt  main.cpp
Source/Project64-audio/: CMakeLists.txt
Source/Project64-core/: AppInit.cpp  CMakeLists.txt  Settings.cpp  Version.h.in
Source/Project64-core/N64System/: EmuCall.cpp  EmuCall.h  N64Rom.cpp  N64System.cpp  N64System.h
Source/Project64-core/N64System/Mips/: MemoryVirtualMem.cpp
Source/Project64-core/RomList/: RomList.cpp
Source/Project64-input/: CMakeLists.txt
Source/Project64/Settings/: UISettings.cpp  UISettings.h
Source/Project64/UserInterface/: About.cpp  About.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  RomBrowser.cpp
Source/Project64/UserInterface/Debugger/: Debugger-AddBreakpoint.cpp  Debugger-AddSymbol.cpp  Debugger-CPULogView.cpp  Debugger-Commands.cpp  Debugger-Commands.h  Debugger-Scripts.cpp  Debugger-TLB.cpp  Debugger.cpp  ScriptInstance.cpp  ScriptInstance.h  ScriptInstanceState.h  ScriptSystem.cpp  ScriptSystem.h
Source/RSP/: CMakeLists.txt
Source/Settings/: CMakeLists.txt
Source/nragev20/: CMakeLists.txt
