cmake_minimum_required(VERSION 3.10)

set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)
set(VERSION_PATCH 3)
set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

set(VERSION_PJ_MAJOR 3)
set(VERSION_PJ_MINOR 0)
set(VERSION_PJ_PATCH 1)
set(VERSION_PJ "${VERSION_PJ_MAJOR}.${VERSION_PJ_MINOR}.${VERSION_PJ_PATCH}")

set(VERSION_FULL "${VERSION}-PJ-${VERSION_PJ}")

project(Project64-EM VERSION "${VERSION}")

set(PJ64_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
make_directory("${PJ64_DIRECTORY}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd5208")
add_definitions(-D_CRT_SECURE_NO_WARNINGS=1)
add_definitions(-DWIN32_LEAN_AND_MEAN=1)

add_subdirectory(vendor)
add_subdirectory(Source)

set(CPACK_GENERATOR "ZIP")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY ON)
set(CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH})
set(CPACK_PACKAGE_VERSION ${VERSION_FULL})
set(CPACK_PACKAGE_DIRECTORY "${CMAKE_BINARY_DIR}/pkg")
include(CPack)
